# cppqed

./: .bzrignore  .gitignore  .gitmodules  C++QED.kdev4  C++QEDBuildTreeSettings.cmake.in  C++QEDConfig.cmake.in  C++QEDConfigVersion.cmake.in  CMakeLists.cmake  CMakeLists.txt  CPPQEDBuildTreeSettings.cmake.in  CPPQEDConfig.cmake.in  CPPQEDConfigVersion.cmake.in  Doxyfile  Doxyfile.in  Jamfile  Jamroot  MILESTONES  Makefile  Makefile.macosx  README.md  README.txt  cppqedconfig.h.in  make.inc  make.macosx.inc  trajectoryTools.py
CPPQEDcore/: .gitignore  CMakeLists.cmake  CMakeLists.txt  CPPQEDBuildTreeSettings.cmake.in  CPPQEDConfig.cmake.in  CompilationMacros.h  Doxyfile  Doxyfile.in  Jamroot  issues.markdown
CPPQEDcore/composites/: .kdev_include_paths  Act.h  BinarySystem.cc  BinarySystem.h  BinarySystemFwd.h  CMakeLists.txt  Composite.cc  Composite.h  Composite.tcc  CompositeFwd.h  SubSystem.h  SubSystemFwd.h  details_BinaryHelper.h  details_BinaryInteractionGenerator.h  details_TMP_helpers.h
CPPQEDcore/doc/: Doxyfile.in  Doxygen.h  cqed.bib  differencesInCoherentElements.d  differencesInCoherentElements.py  main.markdown  master.markdown  mcwfMethod.markdown  multiarrayConcept.markdown  nonorthogonalFormalism.markdown  performance.sh  performance.txt  rationale.markdown  samplingProblem.py  structureGuide.markdown  technicalDefinitions.sty  userGuide.markdown
CPPQEDcore/elements/: Jamfile
CPPQEDcore/examples/: CMakeLists.txt  CoherentElementTest.cc  ExampleInteraction.cc  ExampleInteraction.h  ExampleMode.cc  ExampleMode.h  ExampleModeImpl.cc  ExampleModeMain.cc  HarmonicOscillatorComplex.cc  Jamfile  cpcPaperExamples.cc  multiarrayImplementationMetaProgramming.cc  tutorialBinary.cc  tutorialComposite.cc  tutorialMode.cc
CPPQEDcore/helperscripts/: getLibs.sh
CPPQEDcore/high/: CMakeLists.txt  Evolution.h  EvolutionBinary.h  EvolutionComposite.h  QM_Picture.cc  QM_Picture.h  component_versions.h
CPPQEDcore/quantumdata/: .kdev_include_paths  ArrayBase.h  ArrayBaseFwd.h  CMakeLists.txt  DensityOperator.cc  DensityOperator.h  DensityOperator.tcc  DensityOperatorFwd.h  DimensionsBookkeeper.h  DimensionsBookkeeperFwd.h  DistributionFunctions.cc  DistributionFunctions.h  EntanglementMeasures.h  Jamfile  LazyDensityOperator.h  LazyDensityOperator.tcc  LazyDensityOperatorFFT.cc  LazyDensityOperatorFFT.h  LazyDensityOperatorFFT.tcc  LazyDensityOperatorFwd.h  LazyDensityOperatorSliceIterator.h  NegPT.h  NegPT.tcc  (+17 more)
CPPQEDelements/: CMakeLists.txt  Doxyfile.in
CPPQEDscripts/: .gitignore  1particle1mode.cc  2particles1mode.cc  3qbits.cc  3qbitsPostprocess.cc  4qbits.cc  4qbitsWF.cc  6qbits.cc  CMakeLists.cmake  CMakeLists.txt  Ca40InCavity.cc  Ca40InCavityWithPhonons.cc  CavityRaman.cc  DTLA_C++QED.cc  DTLA_Evolved.cc  DTLA_EvolvedHL.cc  DrivenDissipativeMode.cc  DrivenDissipativeMode_C++QED.cc  DrivenDissipativeMode_Evolved.cc  DrivenDissipativeQbit.cc  FourModes.cc  GeneralDickeImaginaryEvolution.cc  GeneralDickeScript.cc  HomodynedMode.cc  MLJC.cc  NX_coupledModesElim.cc  Optomechanics.cc  PTLA_C++QED.cc  PTLA_Evolved.cc  PTLA_EvolvedHL.cc  PumpedLossyModeBenchmark.cc  PumpedLossyModeComparison.cc  PumpedLossyModeRegression.cc  PumpedLossyMode_C++QED.cc  PumpedLossyMode_Evolved.cc  PumpedLossyQbit.cc  QbitMode.cc  QbitMode_C++QED.cc  QbitMode_Correlations.cc  QbitMode_Evolved.cc  (+12 more)
CPPQEDutils/: Algorithm.h  Archive.h  ArrayTraits.h  Blitz2FLENS.h  BlitzArray.h  BlitzArrayExtensions.h  BlitzArrayExtensions.tcc  BlitzTiny.h  BlitzTinyExtensions.h  BlitzTinyExtensions.tcc  BlitzTinyOfArrays.h  BlitzTinyOfArrays.tcc  BooleanNegatedProxy.cc  BooleanNegatedProxy.h  CMakeLists.txt  CMatrix.cc  CMatrix.h  CVector.h  Combinatorics.cc  Combinatorics.h  CommentingStream.h  ComplexArrayExtensions.cc  ComplexArrayExtensions.h  ComplexArrayExtensions.tcc  ComplexExtensions.h  ContainerIO.h  Conversions.h  DrivenDampedHarmonicOscillator.cc  DrivenDampedHarmonicOscillator.h  Evolved.h  Evolved.tcc  EvolvedGSL.h  EvolvedGSL.tcc  FFT.cc  FFT.h  FFT.tcc  FormDouble.cc  FormDouble.h  FuzzyDouble.cc  FuzzyDouble.h  (+42 more)
CustomElementsExample/: CMakeLists.txt
CustomScriptsExample/: 2ParticlesRingCavitySine.cc  2ParticlesRingCavitySine.cc.disabled  6qbits.cc  CMakeLists.txt
Testing/: CMakeLists.cmake  CMakeLists.txt  testdriver.conf.in  testdriver.py
cpypyqed/: .gitignore  CMakeLists.cmake  CMakeLists.txt  CoreInit.cc  __init__.py  blitz2numpy.h  config.py  io.cc  python_packages_dir.py
dockerEntry/: CMakeLists.txt  entrypoint.sh
elements/: CMakeLists.txt  Jamfile
scripts/: 10qbits.cc  10qbits_same.cc  1particle1mode.cc  1qbit.cc  2particles1mode.cc  2qbits.cc  2qbits_same.cc  3qbits.cc  3qbitsPostprocess.cc  4qbits.cc  4qbits_same.cc  6qbits.cc  6qbits_same.cc  8qbits.cc  8qbits_same.cc  CMakeLists.txt  Ca40InCavity.cc  Ca40InCavityWithPhonons.cc  CavityRaman.cc  FourModes.cc  GeneralDickeImaginaryEvolution.cc  GeneralDickeScript.cc  JC_spin.cc  Jamfile  MLJC.cc  MeiserScript.cc  NX_coupledModesElim.cc  Optomechanics.cc  PTLA_C++QED.cc  PTLA_Evolved.cc  PTLA_EvolvedHL.cc  PumpedLossyModeConvergence.cc  PumpedLossyModeRegression.cc  PumpedLossyMode_C++QED.cc  PumpedLossyMode_Evolved.cc  PumpedLossyQbit.cc  QbitMode_C++QED.cc  QbitMode_Correlations.cc  QbitMode_Evolved.cc  QbitMode_Matrix.cc  (+16 more)
src/: CMakeLists.txt  CPPQEDelementsConfig.cmake.in
utils/: Archive.h  ArrayTraits.h  AveragingUtils.cc  AveragingUtils.h  AveragingUtils.tcc  AveragingUtilsFwd.h  Blitz2FLENS.tcc  BlitzArraySliceIterator.h  BlitzArraySliceIterator.tcc  BlitzTinyExtensionsFwd.h  BlitzTinyOfArrays.tcc  BlitzTinyOfArraysFwd.h  BooleanNegatedProxy.cc  CMakeLists.txt  ComplexArrayExtensions.cc  ComplexExtensions.h  DrivenDampedHarmonicOscillator.h  DrivenDampedHarmonicOscillatorFwd.h  Evolved.h  Exception.h  ExceptionFwd.h  FFTFwd.h  Functional.h  Jamfile  Jamroot  Jamroot.hpc  Jamroot.macosx  Jamroot.reducedOptimization  KeyPrinterFwd.h  Makefile  MathExtensions.cc  MathExtensions.h  ModeFunction.h  Pars.cc  ParsStochasticTrajectory.h  ParticleInitialCondition.h  QM_Picture.h  QM_PictureFwd.h  Randomized.cc  Range.h  (+9 more)
(+1521 files in other folders)
